# pyzipgrep

./: .gitignore  Makefile  pyproject.toml  setup.py
src/pyzipgrep/: __init__.py  __main__.py  pyzipgrep.py
src/pyzipgrep/benchmarks/: __init__.py  run_benchmark.py
src/pyzipgrep/cli/: __init__.py  cli_parser.py
src/pyzipgrep/core/: __init__.py  engine.py  handler.py  models.py  reader.py  streamer.py
src/pyzipgrep/filters/: __init__.py  archive_filters.py  base.py  content_filters.py  file_filters.py
src/pyzipgrep/tests/: run_benchmark.py
src/pyzipgrep/utils/: common.py  exceptions.py  extensions.py
